--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,3 +53,17 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+
+    deployment:
+      staging:
+        branch: master
+        codedeploy:
+          appname-1234:
+            application_root: /
+            region: us-east-1
+            revision_location:
+              revision_type: S3
+              s3_location:
+                bucket: my-bucket
+                key_pattern: appname-1234-{BRANCH}-{SHORT_COMMIT}
+            deployment_group: my-deployment-group
