--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: Deploy to EB if branch is Master
           command: |
-            eb use real-estate --profile eb-cli
+            eb use real-estate-dev --profile eb-cli
             eb deploy -v --staged --profile eb-cli
  
 workflows:
