--- a/.ebextensions/real_estate_dev.config
+++ b/.ebextensions/real_estate_dev.config
@@ -3,7 +3,7 @@ option_settings:
     DJANGO_SETTINGS_MODULE: "real_estate.settings"
     "PYTHONPATH": "/opt/python/current/app/real_estate:$PYTHONPATH"
   "aws:elasticbeanstalk:container:python":
-    WSGIPath: real_estate/real_estate/wsgi.py
+    WSGIPath: real_estate/wsgi.py
     NumProcesses: 3
     NumThreads: 20
   "aws:elasticbeanstalk:container:python:staticfiles":
