--- a/.ebextensions/real_estate_dev.config
+++ b/.ebextensions/real_estate_dev.config
@@ -3,8 +3,6 @@ option_settings:
     DJANGO_SETTINGS_MODULE: "real_estate.settings"
     "PYTHONPATH": "/opt/python/current/app/real_estate:$PYTHONPATH"
   "aws:elasticbeanstalk:container:python":
-    WSGIPath: real_estate/wsgi.py
-    NumProcesses: 3
-    NumThreads: 20
+    WSGIPath: real_estate/real_estate/wsgi.py
   "aws:elasticbeanstalk:container:python:staticfiles":
     "/static/": "www/static/"
