--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,38 @@
+packages:
+  yum:
+    postgresql94-devel: []
+
+container_commands:
+  01_migrate:
+    command: "django-admin.py migrate --noinput"
+    leader_only: true
+  02_init_data:
+    command: "django-admin.py init-basic-data"
+    leader_only: true
+  03_wsgireplace:
+    command: 'cp wsgi.conf ../wsgi.conf'
+
 option_settings:
-  aws:elasticbeanstalk:container:python:
-    WSGIPath: real_estate/wsgi.py
+  - namespace: aws:elasticbeanstalk:container:python
+    option_name: WSGIPath
+    value: config/wsgi.py
+  - option_name: DJANGO_SETTINGS_MODULE
+    value: config.settings.production
+  - option_name: DJANGO_SECRET_KEY
+    value: {{ secret_key }}
+  - option_name: DJANGO_ENV_FILE
+    value: .production.env
+  - option_name: PRODUCTION
+    value: True
+  ## Database ENV Vars
+  ## Enable when switching to a stand-alone RDS instance (outside EB)
+  #- option_name: RDS_DB_NAME
+  #  value: mydb
+  #- option_name: RDS_USERNAME
+  #  value: ebroot
+  #- option_name: RDS_PASSWORD
+  #  value: secret%Password
+  #- option_name: RDS_HOSTNAME
+  #  value: name.xxxxxxxxx.us-east-1.rds.amazonaws.com
+  #- option_name: RDS_PORT
+  #  value: 5432
