--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             sudo pip install virtualenv
             virtualenv env
             source env/bin/activate
-            pip install -r requirements.txt
+            pip install --user -r requirements.txt
 
       - run:
           name: Install awscli
